--- a/catalog/nfs-subdir-ext-provisioner-olm.yaml
+++ b/catalog/nfs-subdir-ext-provisioner-olm.yaml
@@ -10,4 +10,4 @@ schema: olm.channel
 package: nfs-subdir-external-provisioner-olm
 name: preview
 entries:
-  - name: nfs-subdir-external-provisioner-olm.v0.0.6
+  - name: nfs-subdir-external-provisioner-olm.v@@VERSION@@
