[improve] Beef up security like “official” catalog source containers
`k explain catsrc.spec.grpcPodConfig.extractContent` suggests that
said `extractContent` is a Good Thing™.

- Turn it on, by symmetry with pre-installed
  `catsrc/community-operators` of (the same) namespace
  `openshift-marketplace`
- This only works if we pin down the catalog's build image to the
  latest version of that **does not** have pogreb as a feature; since
  the version of `quay.io/openshift/okd-content` that OKD currently
  uses, doesn't support serving out of... whatever pogreb is.
  (Symptom: `cache directory has unexpected contents`, without
  the final colon as [in the new version of that code](https://github.com/operator-framework/operator-registry/blame/ca451895f8c6196fbe391a4bb51d1a9d25bf0c1f/pkg/cache/cache.go#L134))

--- a/catalogSource.yml
+++ b/catalogSource.yml
@@ -29,8 +29,11 @@ metadata:
 spec:
   sourceType: grpc
   grpcPodConfig:
-    securityContextConfig: legacy
-  image: quay-its.epfl.ch/svc0041/isas-fsd-catalog:v0.0.6
+    securityContextConfig: restricted
+    extractContent:
+      cacheDir: /tmp/cache
+      catalogDir: /configs
+  image: quay-its.epfl.ch/svc0041/isas-fsd-catalog:v0.0.9
   displayName: ISAS-FSD Catalog
   publisher: isas-fsd
   updateStrategy:
