--- a/config/default/kustomization.yaml
+++ b/config/default/kustomization.yaml
@@ -6,7 +6,7 @@ namespace: nfs-subdir-ext-provisioner-olm-system
 # "wordpress" becomes "alices-wordpress".
 # Note that it should also match with the prefix (text before '-') of the namespace
 # field above.
-namePrefix: nfs-subdir-ext-provisioner-olm-
+namePrefix: nfs-ext-olm-
 
 # Labels to add to all resources and selectors.
 #labels:
