[feature] NFS's icon

--- a/config/manifests/bases/nfs-subdir-external-provisioner-olm.clusterserviceversion.yaml
+++ b/config/manifests/bases/nfs-subdir-external-provisioner-olm.clusterserviceversion.yaml
@@ -12,8 +12,192 @@ spec:
   description: NFS subdir external provisioner OLM operator
   displayName: NFS subdir external provisioner OLM operator
   icon:
-  - base64data: ""
-    mediatype: ""
+  - base64data: >
+      PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHdpZHRoPSIxMDAiIGhlaWdo
+      dD0iMTAwIiB4bWxuczpieD0iaHR0cHM6Ly9ib3h5LXN2Zy5jb20iPgogIDxkZWZzPgogICAgPGJ4
+      OmV4cG9ydD4KICAgICAgPGJ4OmZpbGUgZm9ybWF0PSJzdmciIHBhdGg9Ik5GUy1wcm92aXNpb25l
+      ci5zdmciIG5vcm1hbGl6YXRpb249InsmcXVvdDtyZW1vdmVCb3h5U1ZHTWV0YWRhdGEmcXVvdDs6
+      dHJ1ZSwmcXVvdDtyZW1vdmVGb3JlaWduTWV0YWRhdGEmcXVvdDs6dHJ1ZSwmcXVvdDtyZW1vdmVB
+      bmltYXRpb25zJnF1b3Q7OnRydWV9Ij48L2J4OmZpbGU+CiAgICAgIDxieDpmaWxlIGZvcm1hdD0i
+      cG5nIiBwYXRoPSJORlMtcHJvdmlzaW9uZXIucG5nIj48L2J4OmZpbGU+CiAgICA8L2J4OmV4cG9y
+      dD4KICA8L2RlZnM+CiAgPHJlY3Qgd2lkdGg9IjEwMCIgaGVpZ2h0PSIxMDAiIHN0eWxlPSJmaWxs
+      OiByZ2IoMjU1LCAyMjQsIDE2Nik7Ij48L3JlY3Q+CiAgPGcgdHJhbnNmb3JtPSJtYXRyaXgoMS43
+      NTQ5NzYsIDAsIDAsIDEuNzU0OTc2LCAtMS4wNjk1ODksIC01Ljk4MTMyNCkiIHN0eWxlPSIiPgog
+      ICAgPHBhdGggZmlsbD0iI0ZGQTAwMCIgZD0iTSAxMi4wNTEgMTEuMzQ3IEwgOC45MzIgMTEuMzQ3
+      IEwgOC4yMzkgMTAuNjU0IEwgNi41MDcgMTAuNjU0IEMgNi4xMjYgMTAuNjU0IDUuODE0IDEwLjk2
+      NiA1LjgxNCAxMS4zNDcgTCA1LjgxNCAxMi43MzMgTCAxMi43NDQgMTIuNzMzIEwgMTIuNzQ0IDEy
+      LjA0IEMgMTIuNzQ0IDExLjY1OSAxMi40MzIgMTEuMzQ3IDEyLjA1MSAxMS4zNDcgWiIgc3R5bGU9
+      IiI+PC9wYXRoPgogICAgPHBhdGggZmlsbD0iI0ZGQ0EyOCIgZD0iTSAxMi4wNTEgMTEuMzQ3IEwg
+      Ni41MDcgMTEuMzQ3IEMgNi4xMjYgMTEuMzQ3IDUuODE0IDExLjY1OSA1LjgxNCAxMi4wNCBMIDUu
+      ODE0IDE1LjUwNSBDIDUuODE0IDE1Ljg4NiA2LjEyNiAxNi4xOTggNi41MDcgMTYuMTk4IEwgMTIu
+      MDUxIDE2LjE5OCBDIDEyLjQzMiAxNi4xOTggMTIuNzQ0IDE1Ljg4NiAxMi43NDQgMTUuNTA1IEwg
+      MTIuNzQ0IDEyLjA0IEMgMTIuNzQ0IDExLjY1OSAxMi40MzIgMTEuMzQ3IDEyLjA1MSAxMS4zNDcg
+      WiIgc3R5bGU9IiI+PC9wYXRoPgogIDwvZz4KICA8ZyB0cmFuc2Zvcm09Im1hdHJpeCgxLjc1NDk3
+      NiwgMCwgMCwgMS43NTQ5NzYsIDIyLjYyMjUzOCwgLTUuOTgxMzI0KSIgc3R5bGU9IiI+CiAgICA8
+      cGF0aCBmaWxsPSIjRkZBMDAwIiBkPSJNIDEyLjA1MSAxMS4zNDcgTCA4LjkzMiAxMS4zNDcgTCA4
+      LjIzOSAxMC42NTQgTCA2LjUwNyAxMC42NTQgQyA2LjEyNiAxMC42NTQgNS44MTQgMTAuOTY2IDUu
+      ODE0IDExLjM0NyBMIDUuODE0IDEyLjczMyBMIDEyLjc0NCAxMi43MzMgTCAxMi43NDQgMTIuMDQg
+      QyAxMi43NDQgMTEuNjU5IDEyLjQzMiAxMS4zNDcgMTIuMDUxIDExLjM0NyBaIiBzdHlsZT0iIj48
+      L3BhdGg+CiAgICA8cGF0aCBmaWxsPSIjRkZDQTI4IiBkPSJNIDEyLjA1MSAxMS4zNDcgTCA2LjUw
+      NyAxMS4zNDcgQyA2LjEyNiAxMS4zNDcgNS44MTQgMTEuNjU5IDUuODE0IDEyLjA0IEwgNS44MTQg
+      MTUuNTA1IEMgNS44MTQgMTUuODg2IDYuMTI2IDE2LjE5OCA2LjUwNyAxNi4xOTggTCAxMi4wNTEg
+      MTYuMTk4IEMgMTIuNDMyIDE2LjE5OCAxMi43NDQgMTUuODg2IDEyLjc0NCAxNS41MDUgTCAxMi43
+      NDQgMTIuMDQgQyAxMi43NDQgMTEuNjU5IDEyLjQzMiAxMS4zNDcgMTIuMDUxIDExLjM0NyBaIiBz
+      dHlsZT0iIj48L3BhdGg+CiAgPC9nPgogIDxnIHRyYW5zZm9ybT0ibWF0cml4KDEuNzU0OTc2LCAw
+      LCAwLCAxLjc1NDk3NiwgNDYuMzE0NjYzLCAtNS45ODEzMjQpIiBzdHlsZT0iIj4KICAgIDxwYXRo
+      IGZpbGw9IiNGRkEwMDAiIGQ9Ik0gMTIuMDUxIDExLjM0NyBMIDguOTMyIDExLjM0NyBMIDguMjM5
+      IDEwLjY1NCBMIDYuNTA3IDEwLjY1NCBDIDYuMTI2IDEwLjY1NCA1LjgxNCAxMC45NjYgNS44MTQg
+      MTEuMzQ3IEwgNS44MTQgMTIuNzMzIEwgMTIuNzQ0IDEyLjczMyBMIDEyLjc0NCAxMi4wNCBDIDEy
+      Ljc0NCAxMS42NTkgMTIuNDMyIDExLjM0NyAxMi4wNTEgMTEuMzQ3IFoiIHN0eWxlPSIiPjwvcGF0
+      aD4KICAgIDxwYXRoIGZpbGw9IiNGRkNBMjgiIGQ9Ik0gMTIuMDUxIDExLjM0NyBMIDYuNTA3IDEx
+      LjM0NyBDIDYuMTI2IDExLjM0NyA1LjgxNCAxMS42NTkgNS44MTQgMTIuMDQgTCA1LjgxNCAxNS41
+      MDUgQyA1LjgxNCAxNS44ODYgNi4xMjYgMTYuMTk4IDYuNTA3IDE2LjE5OCBMIDEyLjA1MSAxNi4x
+      OTggQyAxMi40MzIgMTYuMTk4IDEyLjc0NCAxNS44ODYgMTIuNzQ0IDE1LjUwNSBMIDEyLjc0NCAx
+      Mi4wNCBDIDEyLjc0NCAxMS42NTkgMTIuNDMyIDExLjM0NyAxMi4wNTEgMTEuMzQ3IFoiIHN0eWxl
+      PSIiPjwvcGF0aD4KICA8L2c+CiAgPGcgdHJhbnNmb3JtPSJtYXRyaXgoMS43NTQ5NzYsIDAsIDAs
+      IDEuNzU0OTc2LCA3MC4wMDY3OSwgLTUuOTgxMzI0KSIgc3R5bGU9IiI+CiAgICA8cGF0aCBmaWxs
+      PSIjRkZBMDAwIiBkPSJNIDEyLjA1MSAxMS4zNDcgTCA4LjkzMiAxMS4zNDcgTCA4LjIzOSAxMC42
+      NTQgTCA2LjUwNyAxMC42NTQgQyA2LjEyNiAxMC42NTQgNS44MTQgMTAuOTY2IDUuODE0IDExLjM0
+      NyBMIDUuODE0IDEyLjczMyBMIDEyLjc0NCAxMi43MzMgTCAxMi43NDQgMTIuMDQgQyAxMi43NDQg
+      MTEuNjU5IDEyLjQzMiAxMS4zNDcgMTIuMDUxIDExLjM0NyBaIiBzdHlsZT0iIj48L3BhdGg+CiAg
+      ICA8cGF0aCBmaWxsPSIjRkZDQTI4IiBkPSJNIDEyLjA1MSAxMS4zNDcgTCA2LjUwNyAxMS4zNDcg
+      QyA2LjEyNiAxMS4zNDcgNS44MTQgMTEuNjU5IDUuODE0IDEyLjA0IEwgNS44MTQgMTUuNTA1IEMg
+      NS44MTQgMTUuODg2IDYuMTI2IDE2LjE5OCA2LjUwNyAxNi4xOTggTCAxMi4wNTEgMTYuMTk4IEMg
+      MTIuNDMyIDE2LjE5OCAxMi43NDQgMTUuODg2IDEyLjc0NCAxNS41MDUgTCAxMi43NDQgMTIuMDQg
+      QyAxMi43NDQgMTEuNjU5IDEyLjQzMiAxMS4zNDcgMTIuMDUxIDExLjM0NyBaIiBzdHlsZT0iIj48
+      L3BhdGg+CiAgPC9nPgogIDxnIHRyYW5zZm9ybT0ibWF0cml4KDEuNzU0OTc2LCAwLCAwLCAxLjc1
+      NDk3NiwgLTEuMDY5NTg3LCAxMy42NDMwMjMpIiBzdHlsZT0iIj4KICAgIDxwYXRoIGZpbGw9IiNG
+      RkEwMDAiIGQ9Ik0gMTIuMDUxIDExLjM0NyBMIDguOTMyIDExLjM0NyBMIDguMjM5IDEwLjY1NCBM
+      IDYuNTA3IDEwLjY1NCBDIDYuMTI2IDEwLjY1NCA1LjgxNCAxMC45NjYgNS44MTQgMTEuMzQ3IEwg
+      NS44MTQgMTIuNzMzIEwgMTIuNzQ0IDEyLjczMyBMIDEyLjc0NCAxMi4wNCBDIDEyLjc0NCAxMS42
+      NTkgMTIuNDMyIDExLjM0NyAxMi4wNTEgMTEuMzQ3IFoiIHN0eWxlPSIiPjwvcGF0aD4KICAgIDxw
+      YXRoIGZpbGw9IiNGRkNBMjgiIGQ9Ik0gMTIuMDUxIDExLjM0NyBMIDYuNTA3IDExLjM0NyBDIDYu
+      MTI2IDExLjM0NyA1LjgxNCAxMS42NTkgNS44MTQgMTIuMDQgTCA1LjgxNCAxNS41MDUgQyA1Ljgx
+      NCAxNS44ODYgNi4xMjYgMTYuMTk4IDYuNTA3IDE2LjE5OCBMIDEyLjA1MSAxNi4xOTggQyAxMi40
+      MzIgMTYuMTk4IDEyLjc0NCAxNS44ODYgMTIuNzQ0IDE1LjUwNSBMIDEyLjc0NCAxMi4wNCBDIDEy
+      Ljc0NCAxMS42NTkgMTIuNDMyIDExLjM0NyAxMi4wNTEgMTEuMzQ3IFoiIHN0eWxlPSIiPjwvcGF0
+      aD4KICA8L2c+CiAgPGcgdHJhbnNmb3JtPSJtYXRyaXgoMS43NTQ5NzYsIDAsIDAsIDEuNzU0OTc2
+      LCAyMi42MjI1MzYsIDEzLjY0MzAyMykiIHN0eWxlPSIiPgogICAgPHBhdGggZmlsbD0iI0ZGQTAw
+      MCIgZD0iTSAxMi4wNTEgMTEuMzQ3IEwgOC45MzIgMTEuMzQ3IEwgOC4yMzkgMTAuNjU0IEwgNi41
+      MDcgMTAuNjU0IEMgNi4xMjYgMTAuNjU0IDUuODE0IDEwLjk2NiA1LjgxNCAxMS4zNDcgTCA1Ljgx
+      NCAxMi43MzMgTCAxMi43NDQgMTIuNzMzIEwgMTIuNzQ0IDEyLjA0IEMgMTIuNzQ0IDExLjY1OSAx
+      Mi40MzIgMTEuMzQ3IDEyLjA1MSAxMS4zNDcgWiIgc3R5bGU9IiI+PC9wYXRoPgogICAgPHBhdGgg
+      ZmlsbD0iI0ZGQ0EyOCIgZD0iTSAxMi4wNTEgMTEuMzQ3IEwgNi41MDcgMTEuMzQ3IEMgNi4xMjYg
+      MTEuMzQ3IDUuODE0IDExLjY1OSA1LjgxNCAxMi4wNCBMIDUuODE0IDE1LjUwNSBDIDUuODE0IDE1
+      Ljg4NiA2LjEyNiAxNi4xOTggNi41MDcgMTYuMTk4IEwgMTIuMDUxIDE2LjE5OCBDIDEyLjQzMiAx
+      Ni4xOTggMTIuNzQ0IDE1Ljg4NiAxMi43NDQgMTUuNTA1IEwgMTIuNzQ0IDEyLjA0IEMgMTIuNzQ0
+      IDExLjY1OSAxMi40MzIgMTEuMzQ3IDEyLjA1MSAxMS4zNDcgWiIgc3R5bGU9IiI+PC9wYXRoPgog
+      IDwvZz4KICA8ZyB0cmFuc2Zvcm09Im1hdHJpeCgxLjc1NDk3NiwgMCwgMCwgMS43NTQ5NzYsIDQ2
+      LjMxNDY2MywgMTMuNjQzMDIzKSIgc3R5bGU9IiI+CiAgICA8cGF0aCBmaWxsPSIjRkZBMDAwIiBk
+      PSJNIDEyLjA1MSAxMS4zNDcgTCA4LjkzMiAxMS4zNDcgTCA4LjIzOSAxMC42NTQgTCA2LjUwNyAx
+      MC42NTQgQyA2LjEyNiAxMC42NTQgNS44MTQgMTAuOTY2IDUuODE0IDExLjM0NyBMIDUuODE0IDEy
+      LjczMyBMIDEyLjc0NCAxMi43MzMgTCAxMi43NDQgMTIuMDQgQyAxMi43NDQgMTEuNjU5IDEyLjQz
+      MiAxMS4zNDcgMTIuMDUxIDExLjM0NyBaIiBzdHlsZT0iIj48L3BhdGg+CiAgICA8cGF0aCBmaWxs
+      PSIjRkZDQTI4IiBkPSJNIDEyLjA1MSAxMS4zNDcgTCA2LjUwNyAxMS4zNDcgQyA2LjEyNiAxMS4z
+      NDcgNS44MTQgMTEuNjU5IDUuODE0IDEyLjA0IEwgNS44MTQgMTUuNTA1IEMgNS44MTQgMTUuODg2
+      IDYuMTI2IDE2LjE5OCA2LjUwNyAxNi4xOTggTCAxMi4wNTEgMTYuMTk4IEMgMTIuNDMyIDE2LjE5
+      OCAxMi43NDQgMTUuODg2IDEyLjc0NCAxNS41MDUgTCAxMi43NDQgMTIuMDQgQyAxMi43NDQgMTEu
+      NjU5IDEyLjQzMiAxMS4zNDcgMTIuMDUxIDExLjM0NyBaIiBzdHlsZT0iIj48L3BhdGg+CiAgPC9n
+      PgogIDxnIHRyYW5zZm9ybT0ibWF0cml4KDEuNzU0OTc2LCAwLCAwLCAxLjc1NDk3NiwgNzAuMDA2
+      NzksIDEzLjY0MzAyMykiIHN0eWxlPSIiPgogICAgPHBhdGggZmlsbD0iI0ZGQTAwMCIgZD0iTSAx
+      Mi4wNTEgMTEuMzQ3IEwgOC45MzIgMTEuMzQ3IEwgOC4yMzkgMTAuNjU0IEwgNi41MDcgMTAuNjU0
+      IEMgNi4xMjYgMTAuNjU0IDUuODE0IDEwLjk2NiA1LjgxNCAxMS4zNDcgTCA1LjgxNCAxMi43MzMg
+      TCAxMi43NDQgMTIuNzMzIEwgMTIuNzQ0IDEyLjA0IEMgMTIuNzQ0IDExLjY1OSAxMi40MzIgMTEu
+      MzQ3IDEyLjA1MSAxMS4zNDcgWiIgc3R5bGU9IiI+PC9wYXRoPgogICAgPHBhdGggZmlsbD0iI0ZG
+      Q0EyOCIgZD0iTSAxMi4wNTEgMTEuMzQ3IEwgNi41MDcgMTEuMzQ3IEMgNi4xMjYgMTEuMzQ3IDUu
+      ODE0IDExLjY1OSA1LjgxNCAxMi4wNCBMIDUuODE0IDE1LjUwNSBDIDUuODE0IDE1Ljg4NiA2LjEy
+      NiAxNi4xOTggNi41MDcgMTYuMTk4IEwgMTIuMDUxIDE2LjE5OCBDIDEyLjQzMiAxNi4xOTggMTIu
+      NzQ0IDE1Ljg4NiAxMi43NDQgMTUuNTA1IEwgMTIuNzQ0IDEyLjA0IEMgMTIuNzQ0IDExLjY1OSAx
+      Mi40MzIgMTEuMzQ3IDEyLjA1MSAxMS4zNDcgWiIgc3R5bGU9IiI+PC9wYXRoPgogIDwvZz4KICA8
+      ZyB0cmFuc2Zvcm09Im1hdHJpeCgxLjc1NDk3NiwgMCwgMCwgMS43NTQ5NzYsIC0xLjA2OTU4Nywg
+      MzUuODQzMzA0KSIgc3R5bGU9IiI+CiAgICA8cGF0aCBmaWxsPSIjRkZBMDAwIiBkPSJNIDEyLjA1
+      MSAxMS4zNDcgTCA4LjkzMiAxMS4zNDcgTCA4LjIzOSAxMC42NTQgTCA2LjUwNyAxMC42NTQgQyA2
+      LjEyNiAxMC42NTQgNS44MTQgMTAuOTY2IDUuODE0IDExLjM0NyBMIDUuODE0IDEyLjczMyBMIDEy
+      Ljc0NCAxMi43MzMgTCAxMi43NDQgMTIuMDQgQyAxMi43NDQgMTEuNjU5IDEyLjQzMiAxMS4zNDcg
+      MTIuMDUxIDExLjM0NyBaIiBzdHlsZT0iIj48L3BhdGg+CiAgICA8cGF0aCBmaWxsPSIjRkZDQTI4
+      IiBkPSJNIDEyLjA1MSAxMS4zNDcgTCA2LjUwNyAxMS4zNDcgQyA2LjEyNiAxMS4zNDcgNS44MTQg
+      MTEuNjU5IDUuODE0IDEyLjA0IEwgNS44MTQgMTUuNTA1IEMgNS44MTQgMTUuODg2IDYuMTI2IDE2
+      LjE5OCA2LjUwNyAxNi4xOTggTCAxMi4wNTEgMTYuMTk4IEMgMTIuNDMyIDE2LjE5OCAxMi43NDQg
+      MTUuODg2IDEyLjc0NCAxNS41MDUgTCAxMi43NDQgMTIuMDQgQyAxMi43NDQgMTEuNjU5IDEyLjQz
+      MiAxMS4zNDcgMTIuMDUxIDExLjM0NyBaIiBzdHlsZT0iIj48L3BhdGg+CiAgPC9nPgogIDxnIHRy
+      YW5zZm9ybT0ibWF0cml4KDEuNzU0OTc2LCAwLCAwLCAxLjc1NDk3NiwgMjIuNjIyNTQsIDM1Ljg0
+      MzMwNCkiIHN0eWxlPSIiPgogICAgPHBhdGggZmlsbD0iI0ZGQTAwMCIgZD0iTSAxMi4wNTEgMTEu
+      MzQ3IEwgOC45MzIgMTEuMzQ3IEwgOC4yMzkgMTAuNjU0IEwgNi41MDcgMTAuNjU0IEMgNi4xMjYg
+      MTAuNjU0IDUuODE0IDEwLjk2NiA1LjgxNCAxMS4zNDcgTCA1LjgxNCAxMi43MzMgTCAxMi43NDQg
+      MTIuNzMzIEwgMTIuNzQ0IDEyLjA0IEMgMTIuNzQ0IDExLjY1OSAxMi40MzIgMTEuMzQ3IDEyLjA1
+      MSAxMS4zNDcgWiIgc3R5bGU9IiI+PC9wYXRoPgogICAgPHBhdGggZmlsbD0iI0ZGQ0EyOCIgZD0i
+      TSAxMi4wNTEgMTEuMzQ3IEwgNi41MDcgMTEuMzQ3IEMgNi4xMjYgMTEuMzQ3IDUuODE0IDExLjY1
+      OSA1LjgxNCAxMi4wNCBMIDUuODE0IDE1LjUwNSBDIDUuODE0IDE1Ljg4NiA2LjEyNiAxNi4xOTgg
+      Ni41MDcgMTYuMTk4IEwgMTIuMDUxIDE2LjE5OCBDIDEyLjQzMiAxNi4xOTggMTIuNzQ0IDE1Ljg4
+      NiAxMi43NDQgMTUuNTA1IEwgMTIuNzQ0IDEyLjA0IEMgMTIuNzQ0IDExLjY1OSAxMi40MzIgMTEu
+      MzQ3IDEyLjA1MSAxMS4zNDcgWiIgc3R5bGU9IiI+PC9wYXRoPgogIDwvZz4KICA8ZyB0cmFuc2Zv
+      cm09Im1hdHJpeCgxLjc1NDk3NiwgMCwgMCwgMS43NTQ5NzYsIDQ2LjMxNDY2NywgMzUuODQzMzA0
+      KSIgc3R5bGU9IiI+CiAgICA8cGF0aCBmaWxsPSIjRkZBMDAwIiBkPSJNIDEyLjA1MSAxMS4zNDcg
+      TCA4LjkzMiAxMS4zNDcgTCA4LjIzOSAxMC42NTQgTCA2LjUwNyAxMC42NTQgQyA2LjEyNiAxMC42
+      NTQgNS44MTQgMTAuOTY2IDUuODE0IDExLjM0NyBMIDUuODE0IDEyLjczMyBMIDEyLjc0NCAxMi43
+      MzMgTCAxMi43NDQgMTIuMDQgQyAxMi43NDQgMTEuNjU5IDEyLjQzMiAxMS4zNDcgMTIuMDUxIDEx
+      LjM0NyBaIiBzdHlsZT0iIj48L3BhdGg+CiAgICA8cGF0aCBmaWxsPSIjRkZDQTI4IiBkPSJNIDEy
+      LjA1MSAxMS4zNDcgTCA2LjUwNyAxMS4zNDcgQyA2LjEyNiAxMS4zNDcgNS44MTQgMTEuNjU5IDUu
+      ODE0IDEyLjA0IEwgNS44MTQgMTUuNTA1IEMgNS44MTQgMTUuODg2IDYuMTI2IDE2LjE5OCA2LjUw
+      NyAxNi4xOTggTCAxMi4wNTEgMTYuMTk4IEMgMTIuNDMyIDE2LjE5OCAxMi43NDQgMTUuODg2IDEy
+      Ljc0NCAxNS41MDUgTCAxMi43NDQgMTIuMDQgQyAxMi43NDQgMTEuNjU5IDEyLjQzMiAxMS4zNDcg
+      MTIuMDUxIDExLjM0NyBaIiBzdHlsZT0iIj48L3BhdGg+CiAgPC9nPgogIDxnIHRyYW5zZm9ybT0i
+      bWF0cml4KDEuNzU0OTc2LCAwLCAwLCAxLjc1NDk3NiwgNzAuMDA2NzksIDM1Ljg0MzMwNCkiIHN0
+      eWxlPSIiPgogICAgPHBhdGggZmlsbD0iI0ZGQTAwMCIgZD0iTSAxMi4wNTEgMTEuMzQ3IEwgOC45
+      MzIgMTEuMzQ3IEwgOC4yMzkgMTAuNjU0IEwgNi41MDcgMTAuNjU0IEMgNi4xMjYgMTAuNjU0IDUu
+      ODE0IDEwLjk2NiA1LjgxNCAxMS4zNDcgTCA1LjgxNCAxMi43MzMgTCAxMi43NDQgMTIuNzMzIEwg
+      MTIuNzQ0IDEyLjA0IEMgMTIuNzQ0IDExLjY1OSAxMi40MzIgMTEuMzQ3IDEyLjA1MSAxMS4zNDcg
+      WiIgc3R5bGU9IiI+PC9wYXRoPgogICAgPHBhdGggZmlsbD0iI0ZGQ0EyOCIgZD0iTSAxMi4wNTEg
+      MTEuMzQ3IEwgNi41MDcgMTEuMzQ3IEMgNi4xMjYgMTEuMzQ3IDUuODE0IDExLjY1OSA1LjgxNCAx
+      Mi4wNCBMIDUuODE0IDE1LjUwNSBDIDUuODE0IDE1Ljg4NiA2LjEyNiAxNi4xOTggNi41MDcgMTYu
+      MTk4IEwgMTIuMDUxIDE2LjE5OCBDIDEyLjQzMiAxNi4xOTggMTIuNzQ0IDE1Ljg4NiAxMi43NDQg
+      MTUuNTA1IEwgMTIuNzQ0IDEyLjA0IEMgMTIuNzQ0IDExLjY1OSAxMi40MzIgMTEuMzQ3IDEyLjA1
+      MSAxMS4zNDcgWiIgc3R5bGU9IiI+PC9wYXRoPgogIDwvZz4KICA8ZyB0cmFuc2Zvcm09Im1hdHJp
+      eCgxLjc1NDk3NiwgMCwgMCwgMS43NTQ5NzYsIC0xLjA2OTU4OSwgNTYuNDc1MDkpIiBzdHlsZT0i
+      Ij4KICAgIDxwYXRoIGZpbGw9IiNGRkEwMDAiIGQ9Ik0gMTIuMDUxIDExLjM0NyBMIDguOTMyIDEx
+      LjM0NyBMIDguMjM5IDEwLjY1NCBMIDYuNTA3IDEwLjY1NCBDIDYuMTI2IDEwLjY1NCA1LjgxNCAx
+      MC45NjYgNS44MTQgMTEuMzQ3IEwgNS44MTQgMTIuNzMzIEwgMTIuNzQ0IDEyLjczMyBMIDEyLjc0
+      NCAxMi4wNCBDIDEyLjc0NCAxMS42NTkgMTIuNDMyIDExLjM0NyAxMi4wNTEgMTEuMzQ3IFoiIHN0
+      eWxlPSIiPjwvcGF0aD4KICAgIDxwYXRoIGZpbGw9IiNGRkNBMjgiIGQ9Ik0gMTIuMDUxIDExLjM0
+      NyBMIDYuNTA3IDExLjM0NyBDIDYuMTI2IDExLjM0NyA1LjgxNCAxMS42NTkgNS44MTQgMTIuMDQg
+      TCA1LjgxNCAxNS41MDUgQyA1LjgxNCAxNS44ODYgNi4xMjYgMTYuMTk4IDYuNTA3IDE2LjE5OCBM
+      IDEyLjA1MSAxNi4xOTggQyAxMi40MzIgMTYuMTk4IDEyLjc0NCAxNS44ODYgMTIuNzQ0IDE1LjUw
+      NSBMIDEyLjc0NCAxMi4wNCBDIDEyLjc0NCAxMS42NTkgMTIuNDMyIDExLjM0NyAxMi4wNTEgMTEu
+      MzQ3IFoiIHN0eWxlPSIiPjwvcGF0aD4KICA8L2c+CiAgPGcgdHJhbnNmb3JtPSJtYXRyaXgoMS43
+      NTQ5NzYsIDAsIDAsIDEuNzU0OTc2LCAyMi42MjI1MzgsIDU2LjQ3NTA5KSIgc3R5bGU9IiI+CiAg
+      ICA8cGF0aCBmaWxsPSIjRkZBMDAwIiBkPSJNIDEyLjA1MSAxMS4zNDcgTCA4LjkzMiAxMS4zNDcg
+      TCA4LjIzOSAxMC42NTQgTCA2LjUwNyAxMC42NTQgQyA2LjEyNiAxMC42NTQgNS44MTQgMTAuOTY2
+      IDUuODE0IDExLjM0NyBMIDUuODE0IDEyLjczMyBMIDEyLjc0NCAxMi43MzMgTCAxMi43NDQgMTIu
+      MDQgQyAxMi43NDQgMTEuNjU5IDEyLjQzMiAxMS4zNDcgMTIuMDUxIDExLjM0NyBaIiBzdHlsZT0i
+      Ij48L3BhdGg+CiAgICA8cGF0aCBmaWxsPSIjRkZDQTI4IiBkPSJNIDEyLjA1MSAxMS4zNDcgTCA2
+      LjUwNyAxMS4zNDcgQyA2LjEyNiAxMS4zNDcgNS44MTQgMTEuNjU5IDUuODE0IDEyLjA0IEwgNS44
+      MTQgMTUuNTA1IEMgNS44MTQgMTUuODg2IDYuMTI2IDE2LjE5OCA2LjUwNyAxNi4xOTggTCAxMi4w
+      NTEgMTYuMTk4IEMgMTIuNDMyIDE2LjE5OCAxMi43NDQgMTUuODg2IDEyLjc0NCAxNS41MDUgTCAx
+      Mi43NDQgMTIuMDQgQyAxMi43NDQgMTEuNjU5IDEyLjQzMiAxMS4zNDcgMTIuMDUxIDExLjM0NyBa
+      IiBzdHlsZT0iIj48L3BhdGg+CiAgPC9nPgogIDxnIHRyYW5zZm9ybT0ibWF0cml4KDEuNzU0OTc2
+      LCAwLCAwLCAxLjc1NDk3NiwgNDYuMzE0NjYzLCA1Ni40NzUwOSkiIHN0eWxlPSIiPgogICAgPHBh
+      dGggZmlsbD0iI0ZGQTAwMCIgZD0iTSAxMi4wNTEgMTEuMzQ3IEwgOC45MzIgMTEuMzQ3IEwgOC4y
+      MzkgMTAuNjU0IEwgNi41MDcgMTAuNjU0IEMgNi4xMjYgMTAuNjU0IDUuODE0IDEwLjk2NiA1Ljgx
+      NCAxMS4zNDcgTCA1LjgxNCAxMi43MzMgTCAxMi43NDQgMTIuNzMzIEwgMTIuNzQ0IDEyLjA0IEMg
+      MTIuNzQ0IDExLjY1OSAxMi40MzIgMTEuMzQ3IDEyLjA1MSAxMS4zNDcgWiIgc3R5bGU9IiI+PC9w
+      YXRoPgogICAgPHBhdGggZmlsbD0iI0ZGQ0EyOCIgZD0iTSAxMi4wNTEgMTEuMzQ3IEwgNi41MDcg
+      MTEuMzQ3IEMgNi4xMjYgMTEuMzQ3IDUuODE0IDExLjY1OSA1LjgxNCAxMi4wNCBMIDUuODE0IDE1
+      LjUwNSBDIDUuODE0IDE1Ljg4NiA2LjEyNiAxNi4xOTggNi41MDcgMTYuMTk4IEwgMTIuMDUxIDE2
+      LjE5OCBDIDEyLjQzMiAxNi4xOTggMTIuNzQ0IDE1Ljg4NiAxMi43NDQgMTUuNTA1IEwgMTIuNzQ0
+      IDEyLjA0IEMgMTIuNzQ0IDExLjY1OSAxMi40MzIgMTEuMzQ3IDEyLjA1MSAxMS4zNDcgWiIgc3R5
+      bGU9IiI+PC9wYXRoPgogIDwvZz4KICA8ZyB0cmFuc2Zvcm09Im1hdHJpeCgxLjc1NDk3NiwgMCwg
+      MCwgMS43NTQ5NzYsIDcwLjAwNjc5LCA1Ni40NzUwOSkiIHN0eWxlPSIiPgogICAgPHBhdGggZmls
+      bD0iI0ZGQTAwMCIgZD0iTSAxMi4wNTEgMTEuMzQ3IEwgOC45MzIgMTEuMzQ3IEwgOC4yMzkgMTAu
+      NjU0IEwgNi41MDcgMTAuNjU0IEMgNi4xMjYgMTAuNjU0IDUuODE0IDEwLjk2NiA1LjgxNCAxMS4z
+      NDcgTCA1LjgxNCAxMi43MzMgTCAxMi43NDQgMTIuNzMzIEwgMTIuNzQ0IDEyLjA0IEMgMTIuNzQ0
+      IDExLjY1OSAxMi40MzIgMTEuMzQ3IDEyLjA1MSAxMS4zNDcgWiIgc3R5bGU9IiI+PC9wYXRoPgog
+      ICAgPHBhdGggZmlsbD0iI0ZGQ0EyOCIgZD0iTSAxMi4wNTEgMTEuMzQ3IEwgNi41MDcgMTEuMzQ3
+      IEMgNi4xMjYgMTEuMzQ3IDUuODE0IDExLjY1OSA1LjgxNCAxMi4wNCBMIDUuODE0IDE1LjUwNSBD
+      IDUuODE0IDE1Ljg4NiA2LjEyNiAxNi4xOTggNi41MDcgMTYuMTk4IEwgMTIuMDUxIDE2LjE5OCBD
+      IDEyLjQzMiAxNi4xOTggMTIuNzQ0IDE1Ljg4NiAxMi43NDQgMTUuNTA1IEwgMTIuNzQ0IDEyLjA0
+      IEMgMTIuNzQ0IDExLjY1OSAxMi40MzIgMTEuMzQ3IDEyLjA1MSAxMS4zNDcgWiIgc3R5bGU9IiI+
+      PC9wYXRoPgogIDwvZz4KPC9zdmc+Cg==
+    mediatype: image/svg+xml
   install:
     spec:
       deployments: null
