--- a/rbac/auth_proxy_client_clusterrole.yaml
+++ b/rbac/auth_proxy_client_clusterrole.yaml
@@ -3,22 +3,13 @@ kind: ClusterRole
 metadata:
   labels:
     app.kubernetes.io/name: clusterrole
-    app.kubernetes.io/instance: proxy-role
+    app.kubernetes.io/instance: metrics-reader
     app.kubernetes.io/component: kube-rbac-proxy
     app.kubernetes.io/created-by: nfs-subdir-ext-provisioner-olm
     app.kubernetes.io/part-of: nfs-subdir-ext-provisioner-olm
-    app.kubernetes.io/managed-by: kustomize
-  name: proxy-role
+  name: nfs-ext-olm-metrics-reader
 rules:
-- apiGroups:
-  - authentication.k8s.io
-  resources:
-  - tokenreviews
+- nonResourceURLs:
+  - "/metrics"
   verbs:
-  - create
-- apiGroups:
-  - authorization.k8s.io
-  resources:
-  - subjectaccessreviews
-  verbs:
-  - create
+  - get
