--- a/rbac/auth_proxy_role.yaml
+++ b/rbac/auth_proxy_role.yaml
@@ -3,14 +3,21 @@ kind: ClusterRole
 metadata:
   labels:
     app.kubernetes.io/name: clusterrole
-    app.kubernetes.io/instance: metrics-reader
+    app.kubernetes.io/instance: proxy-role
     app.kubernetes.io/component: kube-rbac-proxy
     app.kubernetes.io/created-by: nfs-subdir-ext-provisioner-olm
     app.kubernetes.io/part-of: nfs-subdir-ext-provisioner-olm
-    app.kubernetes.io/managed-by: kustomize
-  name: metrics-reader
+  name: nfs-ext-olm-proxy-role
 rules:
-- nonResourceURLs:
-  - "/metrics"
+- apiGroups:
+  - authentication.k8s.io
+  resources:
+  - tokenreviews
   verbs:
-  - get
+  - create
+- apiGroups:
+  - authorization.k8s.io
+  resources:
+  - subjectaccessreviews
+  verbs:
+  - create
