--- a/rbac/auth_proxy_service.yaml
+++ b/rbac/auth_proxy_service.yaml
@@ -8,9 +8,8 @@ metadata:
     app.kubernetes.io/component: kube-rbac-proxy
     app.kubernetes.io/created-by: nfs-subdir-ext-provisioner-olm
     app.kubernetes.io/part-of: nfs-subdir-ext-provisioner-olm
-    app.kubernetes.io/managed-by: kustomize
-  name: controller-manager-metrics-service
-  namespace: system
+  name: nfs-ext-olm-controller-manager-metrics-service
+  namespace: nfs-subdir-ext-provisioner-olm-system
 spec:
   ports:
   - name: https
