--- a/rbac/leader_election_role.yaml
+++ b/rbac/leader_election_role.yaml
@@ -8,8 +8,7 @@ metadata:
     app.kubernetes.io/component: rbac
     app.kubernetes.io/created-by: nfs-subdir-ext-provisioner-olm
     app.kubernetes.io/part-of: nfs-subdir-ext-provisioner-olm
-    app.kubernetes.io/managed-by: kustomize
-  name: leader-election-role
+  name: nfs-ext-olm-leader-election-role
 rules:
 - apiGroups:
   - ""
