--- a/rbac/role_binding.yaml
+++ b/rbac/role_binding.yaml
@@ -3,17 +3,16 @@ kind: ClusterRoleBinding
 metadata:
   labels:
     app.kubernetes.io/name: clusterrolebinding
-    app.kubernetes.io/instance: proxy-rolebinding
-    app.kubernetes.io/component: kube-rbac-proxy
+    app.kubernetes.io/instance: manager-rolebinding
+    app.kubernetes.io/component: rbac
     app.kubernetes.io/created-by: nfs-subdir-ext-provisioner-olm
     app.kubernetes.io/part-of: nfs-subdir-ext-provisioner-olm
-    app.kubernetes.io/managed-by: kustomize
-  name: proxy-rolebinding
+  name: nfs-ext-olm-manager-rolebinding
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
-  name: proxy-role
+  name: nfs-ext-olm-manager-role
 subjects:
 - kind: ServiceAccount
-  name: controller-manager
-  namespace: system
+  name: nfs-ext-olm-controller-manager
+  namespace: nfs-subdir-ext-provisioner-olm-system
