--- a/rbac/service_account.yaml
+++ b/rbac/service_account.yaml
@@ -7,6 +7,5 @@ metadata:
     app.kubernetes.io/component: rbac
     app.kubernetes.io/created-by: nfs-subdir-ext-provisioner-olm
     app.kubernetes.io/part-of: nfs-subdir-ext-provisioner-olm
-    app.kubernetes.io/managed-by: kustomize
-  name: controller-manager
-  namespace: system
+  name: nfs-ext-olm-controller-manager
+  namespace: nfs-subdir-ext-provisioner-olm-system
