[feature] Grant `hostmount-anyuid` SCC to nfs controller
As per https://www.redhat.com/en/blog/managing-sccs-in-openshift under
§ “Managing SCCs with Role Based Access Control”, given that §
“Managing SCCs with Operator Lifecycle Manager” (which we *did* try
first) puts the permission in the wrong place; namely, on the
`system:serviceaccount:openshift-operators:nfs-ext-olm-controller-manager`
service account)

--- a/helm-charts/nfs-subdir-external-provisioner/templates/clusterrole.yaml
+++ b/helm-charts/nfs-subdir-external-provisioner/templates/clusterrole.yaml
@@ -21,6 +21,15 @@ rules:
   - apiGroups: [""]
     resources: ["events"]
     verbs: ["create", "update", "patch"]
+  # We need to mount NFS things
+  - apiGroups:
+    - security.openshift.io
+    resources:
+    - securitycontextconstraints
+    resourceNames:
+    - hostmount-anyuid
+    verbs:
+    - use
 {{- if .Values.podSecurityPolicy.enabled }}
   - apiGroups:      ['extensions']
     resources:      ['podsecuritypolicies']
