[fix] `make deploy`: standardize on `nfs-ext-olm-system` namespace
These namespaces are discarded by `operator-sdk generate bundle` as
part of `make bundle-build`. The only time they are in use, is if
someone is testing them with `make deploy` while embugging.

--- a/rbac/leader_election_role_binding.yaml
+++ b/rbac/leader_election_role_binding.yaml
@@ -15,4 +15,4 @@ roleRef:
 subjects:
 - kind: ServiceAccount
   name: nfs-ext-olm-controller-manager
-  namespace: nfs-subdir-ext-provisioner-olm-system
+  namespace: nfs-ext-olm-system
