--- a/rbac/service_account.yaml
+++ b/rbac/service_account.yaml
@@ -8,4 +8,4 @@ metadata:
     app.kubernetes.io/created-by: nfs-subdir-ext-provisioner-olm
     app.kubernetes.io/part-of: nfs-subdir-ext-provisioner-olm
   name: nfs-ext-olm-controller-manager
-  namespace: nfs-subdir-ext-provisioner-olm-system
+  namespace: nfs-ext-olm-system
